#  Edit the following fields to match your project

[project]
name = "simple-aspectratio-comfyui"
description = "Simple ratio preset selector with csv file"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["",]  # e.g.) ["numpy==1.18.1", ]

[project.urls]
Repository = "https://github.com/Hapseleg/simple-aspectratio-comfyui/tree/master"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Hapse"
DisplayName = "Simple Ratio Selector (Hapse)"
Icon = ""
